--- a/Android/AndroidPlay/app/src/main/res/layout/activity_login.xml
+++ b/Android/AndroidPlay/app/src/main/res/layout/activity_login.xml
@@ -1,20 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.cangiracoglu.cogeq1.Login2Activity"
-    android:background="@drawable/city">
+    android:paddingRight="@dimen/activity_horizontal_margin">
 
     <ImageView
         android:layout_width="300dp"
         android:layout_height="200dp"
-        android:id="@+id/imageView"
+        android:id="@+id/cogeqLogo"
         android:background="@drawable/cogeq2"
         android:layout_marginTop="35dp"
         android:layout_alignParentTop="true"
@@ -46,11 +42,11 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button"
+        android:id="@+id/foursquareButton"
         android:layout_marginBottom="36dp"
         android:background="@drawable/foursquare"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-    />
+        android:layout_centerHorizontal="true"
+        android:onClick="loginButtonsOnClick" />
 
 </RelativeLayout>
