--- a/Android/AndroidPlay/app/src/main/res/layout/activity_login.xml
+++ b/Android/AndroidPlay/app/src/main/res/layout/activity_login.xml
@@ -49,4 +49,13 @@
         android:layout_centerHorizontal="true"
         android:onClick="loginButtonsOnClick" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SignUp"
+        android:id="@+id/signUpButton"
+        android:onClick="signUpButtonPressed"
+        android:layout_above="@+id/foursquareButton"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
