--- a/Android/AndroidPlay/app/src/main/res/layout/content_login.xml
+++ b/Android/AndroidPlay/app/src/main/res/layout/content_login.xml
@@ -50,6 +50,14 @@
         android:background="@drawable/foursquare"
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/cogeqLogo" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SignUp"
+        android:id="@+id/signUpButton"
+        android:layout_above="@+id/button"
+        android:layout_centerHorizontal="true" />
     />
 
 </RelativeLayout>
