SignUp Page edited

--- a/Android/AndroidPlay/app/src/main/res/layout/content_sign_up.xml
+++ b/Android/AndroidPlay/app/src/main/res/layout/content_sign_up.xml
@@ -18,84 +18,60 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Name"
-            android:id="@+id/nameTextView"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+        android:orientation="vertical"
+        >
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:text="Name"
+            android:text="We don't need your name but you can enter though"
             android:ems="10"
             android:id="@+id/signUp_nameEditText"
             android:layout_below="@+id/nameTextView"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Surname"
-            android:id="@+id/nameTextView"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            />
+
+            android:layout_marginBottom="20dp"
+            android:autoText="false" />
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:text="Surname"
+            android:text="This is just smart travelling application why to need surname :)"
             android:ems="10"
-            android:id="@+id/signUp_nameEditText"
+            android:id="@+id/signUp_surnameEditText"
             android:layout_below="@+id/nameTextView"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="UserName"
-            android:id="@+id/textView5" />
+            android:layout_marginBottom="20dp"/>
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/signUp_usernameEditText"
-            android:text="username" />
+            android:layout_marginBottom="20dp"
+            android:text="Tell us how dou you want to be called, your nickname..." />
 
-        <TextView
-            android:layout_width="wrap_content"
+        <EditText
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Password"
-            android:id="@+id/textView4"
-            android:layout_above="@+id/signUp_PassEditText"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:id="@+id/signUp_emailEditText"
+            android:layout_marginBottom="20dp"
+            android:text="We want to be in touch but just with an email" />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/signUp_passwordEditText" />
+            android:layout_marginBottom="10dp"
+            android:id="@+id/signUp_passwordEditText"
+            android:text="Your very secret password" />/>
+
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ok"
+            android:text="I am ready :)"
+            android:layout_marginBottom="10dp"
             android:id="@+id/signUp_okButton"
             android:onClick="okButtonPressed" />
 
