--- a/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/activity_cogeq_activity_view.xml
+++ b/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/activity_cogeq_activity_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.androidbelieve.drawerwithswipetabs.CogeqActivityViewActivity">
+    tools:context="com.cogeq.cogeqapp.CogeqActivityViewActivity">
 
     <include layout="@layout/content_cogeq_activity_view" />
 
