--- a/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/activity_launcher.xml
+++ b/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/activity_launcher.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.androidbelieve.drawerwithswipetabs.LauncherActivity">
+    tools:context="com.cogeq.cogeqapp.LauncherActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
