--- a/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/city_layout.xml
+++ b/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/city_layout.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.androidbelieve.drawerwithswipetabs.SearchCityFragment">
+    tools:context="com.cogeq.cogeqapp.SearchCityFragment">
 
     <TextView
         android:layout_width="wrap_content"
