--- a/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/city_layout.xml
+++ b/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/city_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -19,6 +20,16 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <!--<com.cogeq.cogeqapp.ArrayAdapterSearchView-->
+        <!--android:id="@+id/action_search"-->
+        <!--android:icon="@android:drawable/ic_menu_add"-->
+        <!--android:title="TITLE"-->
+        <!--app:actionViewClass="com.cogeq.cogeqapp.ArrayAdapterSearchView"-->
+        <!--app:showAsAction="ifRoom|collapseActionView"-->
+        <!--android:layout_below="@id/chooseDestination"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content" />-->
+
     <SearchView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -30,8 +41,6 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:layout_below="@+id/searchView"
-        android:layout_alignRight="@+id/searchView"
-        android:layout_alignEnd="@+id/searchView" />
+        android:id="@+id/search_list"
+        android:layout_below="@+id/searchView" />
 </RelativeLayout>
