--- a/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/date_layout.xml
+++ b/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/date_layout.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.cogeq.cogeqapp.PickDateFragment">
+    tools:context=".PickStartDateFragment">
 
 
     <TextView
@@ -17,16 +17,6 @@
         android:text="Starting Date ..."
         android:id="@+id/startDate"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Please Enter Length of your travel ..."
-        android:id="@+id/lengthOfTravel"
-        android:layout_above="@+id/startDate"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
