date null pointer error fixed

--- a/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/date_layout.xml
+++ b/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/date_layout.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Starting Date ..."
-        android:id="@+id/startDate"
+        android:id="@+id/date"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
