--- a/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/activity_login.xml
+++ b/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin">
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:background="@drawable/girl2">
 
     <ImageView
         android:layout_width="300dp"
