--- a/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/empty_list_row.xml
+++ b/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/empty_list_row.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/tick"
+        android:visibility="invisible"
+        android:id="@+id/selectionTick"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/empty_list_textView"/>
+        android:id="@+id/empty_list_textView"
+        android:layout_toRightOf="@id/selectionTick"/>
 
-</LinearLayout>
+
+
+</RelativeLayout>
