--- a/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/empty_list_row.xml
+++ b/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/empty_list_row.xml
@@ -4,17 +4,23 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:background="@drawable/tick"
         android:visibility="invisible"
-        android:id="@+id/selectionTick"/>
+        android:id="@+id/selectionTick"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="5dp" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/empty_list_textView"
-        android:layout_toRightOf="@id/selectionTick"/>
-
+        android:layout_toRightOf="@id/selectionTick"
+        android:layout_marginLeft="20dp" />
 
 
 </RelativeLayout>
