--- a/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/settings_layout.xml
+++ b/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/settings_layout.xml
@@ -47,16 +47,16 @@
             android:layout_alignRight="@+id/imageView4"
             android:layout_alignEnd="@+id/imageView4" />
 
-        <ImageButton
+        <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:id="@+id/sunny"
             android:background="@drawable/sunny2"
-            android:layout_alignTop="@+id/radioGroup2"
-            android:layout_alignRight="@+id/startTime"
-            android:layout_alignEnd="@+id/startTime" />
+            android:layout_below="@+id/wheaterCondition"
+            android:layout_marginLeft="30dp" />
 
-        <ImageButton
+
+        <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:id="@+id/rainy"
@@ -66,7 +66,7 @@
             android:layout_alignEnd="@+id/scrollView" />
 
 
-        <ImageButton
+        <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:id="@+id/snowy"
@@ -80,8 +80,8 @@
             android:id="@+id/sleepy"
             android:background="@drawable/sleepy"
             android:layout_below="@+id/travelIntensity"
-            android:layout_alignLeft="@+id/sunny"
-            android:layout_alignStart="@+id/sunny" />
+            android:layout_marginLeft="30dp" />
+
 
         <ImageView
             android:layout_width="60dp"
