--- a/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/content_launcher.xml
+++ b/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/content_launcher.xml
@@ -31,4 +31,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:onClick="launcherButtonsClick" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button"
+        android:layout_below="@+id/mainActivityButton"
+        android:layout_centerHorizontal="true"
+        android:onClick="launcherButtonsClick" />
 </RelativeLayout>
