--- a/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/cogeq_activity_row.xml
+++ b/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/cogeq_activity_row.xml
@@ -17,7 +17,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/text"
         android:text="Hello World"
-        android:layout_alignBottom="@+id/imageView"
+        android:layout_alignBottom="@+id/image"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:background="#80000000"
