--- a/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/primary_layout.xml
+++ b/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/primary_layout.xml
@@ -4,10 +4,17 @@
     android:layout_height="match_parent"
     android:id="@+id/relativeLayout">
 
-    <ListView
-        android:layout_width="wrap_content"
+    <!--<ListView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@android:id/list">-->
+<!--</ListView>-->
+    <com.cogeq.cogeqapp.DynamicListView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@android:id/list">
+        android:id="@+id/list">
+    </com.cogeq.cogeqapp.DynamicListView>
 
-    </ListView>
+
+
 </RelativeLayout>
