--- a/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/cogeq_activity_row.xml
+++ b/Android/SmartTravelling(COGEQ)/app/src/main/res/layout/cogeq_activity_row.xml
@@ -4,8 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:padding="10dp"
-    android:weightSum="1"
-    android:onClick="activityOnClick">
+    android:weightSum="1">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="150dp"
